--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.navbar-bg {
+  background: rgb(28, 22, 69);
+  background: linear-gradient(90deg, rgba(28, 22, 69, 1) 0%, rgba(10, 3, 24, 1) 50%);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.dropdown-bg {
+  background: rgb(29, 23, 70);
+  background: linear-gradient(90deg, rgba(29, 23, 70, 1) 0%, rgba(41, 36, 101, 1) 80%);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.text-white {
+  color: #f2f3d7
 }
